fixed item collapsing while on edit mode

--- a/src/app/components/item-list-components/budget-item/budget-item.component.css
+++ b/src/app/components/item-list-components/budget-item/budget-item.component.css
@@ -1,9 +1,11 @@
 a {
     margin-bottom: 1px;
 }
-
 a:hover{
     cursor: pointer;
+}
+.disabled-cursor:hover {
+    cursor: default;
 }
 .edit-show {
     display: none;
